# FAG-INVENIO

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  render.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: architecture.md
examples/: options_accessoires_sample.csv
src/api/: main.py
src/parser/: __init__.py  _common.py  designation.py  designation_decoder.csv  docx_parser.py  mapping.csv  pdf_parser.py
src/schema/: options_schema.json  pac_geg_schema.json
src/services/: baserow_client.py  contacts_repo.py  options_catalog.py  pdf_generator.py  settings.py
src/services/templates/: fiche.html.j2
tests/: conftest.py
tests/contract/: test_baserow_live.py
tests/fixtures/: galletti_docx.py  galletti_pdf.py
tests/integration/: test_api.py
tests/unit/: test_baserow_client.py  test_baserow_smoke.py  test_baserow_to_decoder.py  test_contacts_repo.py  test_csv_to_baserow.py  test_designation.py  test_docx_parser.py  test_options_catalog.py  test_parser_bench.py  test_pdf_generator.py  test_pdf_parser.py  test_settings.py  test_validate_csv.py
tools/: baserow_smoke.py  baserow_to_decoder.py  csv_to_baserow.py  parser_bench.py  validate_csv.py
ui/: .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/e2e/: _capture.spec.ts  admin.spec.ts  contacts.spec.ts  full-flow.spec.ts
ui/e2e/fixtures/: sample_pac.docx
ui/public/: _redirects
ui/src/: App.tsx  main.tsx  vite-env.d.ts
ui/src/api/: admin.ts  client.ts  contacts.ts  generate.ts  options.ts  types.ts
ui/src/components/: BaserowBadge.tsx  ClientSearch.tsx  ContactCard.tsx  DepartmentPicker.tsx  Dropzone.tsx  ExtractionSummary.tsx  FranceMap.tsx  NewClientModal.tsx  OptionRow.tsx  OptionsAccordion.tsx  PlansUploader.tsx
ui/src/data/: departmentCentroids.ts  departments.ts
ui/src/lib/: postalCode.ts  sessionContext.ts
ui/src/pages/: Contacts.tsx  Generate.tsx  Home.tsx  Import.tsx  Options.tsx
ui/src/styles/: index.css
ui/src/test/: BaserowBadge.test.tsx  ClientSearch.test.tsx  (+14 more)
(+1 files in other folders)
