[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invenio-galletti"
version = "0.1.0"
description = "France Air - SaaS d'extraction et de generation de fiches de selection (migration GALLETTI -> INVENIO)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "France Air - Solution Habitat" }]

dependencies = [
    "fastapi>=0.110,<0.120",
    "uvicorn[standard]>=0.27,<0.35",
    "python-docx>=1.1,<2.0",
    "pdfplumber>=0.11,<0.12",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "jsonschema>=4.21,<5.0",
    "rapidfuzz>=3.6,<4.0",
    "pandas>=2.2,<3.0",
    "httpx>=0.27,<0.29",
    "python-multipart>=0.0.9",
    "jinja2>=3.1,<4.0",
    "weasyprint>=62,<70",
]

[project.optional-dependencies]
playwright = ["playwright>=1.42,<2.0"]
ocr = ["pytesseract>=0.3.10"]
dev = [
    "pytest>=8.1,<9.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.4,<0.13",
    "mypy>=1.9,<2.0",
    "reportlab>=4.0,<5.0",
    "types-jsonschema",
    "pandas-stubs",
]

[project.scripts]
validate-options-csv = "tools.validate_csv:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tools*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["src", "tools"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["examples", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "C4"]
# B008: FastAPI relies on Depends/Path/Query/UploadFile in defaults; allow.
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src", "tools"]
